src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campaign_AutoNumber__c</fullName>
        <displayFormat>1{000000}</displayFormat>
        <label>Campaign AutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Campaign_Category__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Direct Sales</fullName>
                </value>
                <value>
                    <fullName>Field Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_IATA_Area__c</fullName>
        <label>IATA Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>AsiaPac</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Worldwide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_LOB_Focus__c</fullName>
        <label>Campaign LOB Focus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Intelligence</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Distribution &amp; Financial Services</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>E&amp;F</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Publishing</fullName>
                </value>
                <value>
                    <fullName>Strategic Partnerships</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Link__c</fullName>
        <description>IEC - URL to include in email for tracking purpose</description>
        <formula>LEFT($Api.Enterprise_Server_URL_300, FIND(&apos;/services&apos;,$Api.Enterprise_Server_URL_300)) + Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Live_Days__c</fullName>
        <description>Number of days planned for the activity to take place</description>
        <label>Campaign Live Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Number__c</fullName>
        <formula>IF (ISPICKVAL (Campaign_focus__c,&quot;Pax&quot;), &quot;PAX-&quot; &amp; Campaign_AutoNumber__c,
IF (ISPICKVAL (Campaign_focus__c,&quot;Cargo&quot;), &quot;CAR-&quot; &amp; Campaign_AutoNumber__c,
IF (ISPICKVAL (Campaign_focus__c,&quot;Travel &amp; Tourism&quot;), &quot;TT-&quot; &amp; Campaign_AutoNumber__c,
IF (ISPICKVAL (Campaign_focus__c,&quot;Airport &amp; Civav&quot;), &quot;AR-&quot; &amp; Campaign_AutoNumber__c,
IF (ISPICKVAL (Campaign_focus__c,&quot;Not Specific&quot;), &quot;NS-&quot; &amp; Campaign_AutoNumber__c, &quot;NULL&quot;)))))</formula>
        <label>Campaign Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_focus__c</fullName>
        <label>Campaign Segment Focus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Travel &amp; Tourism</fullName>
                </value>
                <value>
                    <fullName>Cargo</fullName>
                </value>
                <value>
                    <fullName>Airport &amp; CIVAV</fullName>
                </value>
                <value>
                    <fullName>Pax</fullName>
                </value>
                <value>
                    <fullName>Not Specific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <description>This is to enter which seciton the campaign is for.</description>
        <label>Cost Center</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Campaign Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Name)&lt;5,&quot;Meaningful Campaign Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Status ,&quot;&quot;), &quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( StartDate )))=0, &quot;Start Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( EndDate )))=0, &quot;End Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(NumberOfContacts  +  NumberOfLeads = 0, &quot;No Associated Members, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT( ExpectedRevenue ))=0, &quot;Expected Revenue&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN(  Name  ) &lt; 5, 0,20) + IF(ISPICKVAL(  Type ,&quot;&quot; ), 0,20) + IF(ISPICKVAL( Status ,&quot;&quot; ), 0,20) + IF(LEN( TEXT(MONTH( StartDate )))= 0, 0,10) + IF( LEN(TEXT(MONTH( EndDate ))) = 0, 0,10) + IF(  NumberOfContacts  +  NumberOfLeads = 0, 0,10)  + IF( LEN( TEXT( ExpectedRevenue ) ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generate_Members_Completed_On__c</fullName>
        <description>IEC - Timestamp indicating when generation of campaign members is complete</description>
        <label>Generate Members Completed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_notice_generated__c</fullName>
        <description>IEC - Timestamp indicating when generation of renewal notices is complete</description>
        <label>Renewal notice generated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Campaign_Id__c</fullName>
        <description>The Pardot identifier for the connected campaign record</description>
        <externalId>true</externalId>
        <label>Pardot Campaign Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pi__Pardot_Has_Dependencies__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if Pardot has marketing assets using this campaign</description>
        <label>Pardot Has Dependencies</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Advertising22</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>Campaign_LOB_Focus__c</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign_LOB_Focus__c</field>
            <operation>equals</operation>
            <value>Advertising</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Advertising Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <group>MACSAllIATACommercial</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DirectSalesAllInactive</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>Campaign_Live_Days__c</columns>
        <columns>Campaign_focus__c</columns>
        <columns>Campaign_LOB_Focus__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>psipo</value>
        </filters>
        <label>Direct Sales - All Inactive</label>
        <language>en_US</language>
        <sharedTo>
            <group>MACSDirectSalesAll</group>
            <role>VPMACS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DirectSalesSponsorshipAllInactive</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>Campaign_Live_Days__c</columns>
        <columns>Campaign_focus__c</columns>
        <columns>Campaign_LOB_Focus__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>0122000000002PY</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Guertin</value>
        </filters>
        <label>Direct Sales Sponsorship - All Inactive</label>
        <language>en_US</language>
        <sharedTo>
            <group>MACSDirectSalesAll</group>
            <role>VPMACS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DirectSalesSponsorshipCompleted</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>AMOUNT_ALL</columns>
        <columns>AMOUNT_WON</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>Campaign_LOB_Focus__c</columns>
        <columns>Campaign_focus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>0122000000002PY</value>
        </filters>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Guertin</value>
        </filters>
        <label>Direct Sales Sponsorship - Completed</label>
        <language>en_US</language>
        <sharedTo>
            <group>MACSDirectSalesAll</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MRO_SmartHub_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>MRO SmartHub</value>
        </filters>
        <label>MRO SmartHub Campaigns</label>
        <language>en_US</language>
        <sharedTo>
            <group>MRO_SmartHub_External_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>StrategicPartnershipsAll</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Campaign_Category__c</columns>
        <columns>AMOUNT_ALL</columns>
        <columns>AMOUNT_WON</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>contains</operation>
            <value>aways,belanger,breton,page</value>
        </filters>
        <label>Strategic Partnerships - All</label>
        <language>en_US</language>
        <sharedTo>
            <group>MACSStrategicPartnerships</group>
        </sharedTo>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>